--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "fastify": "^3.19.2",
-    "fastify-static": "^4.2.2"
+    "fastify-static": "^4.2.2",
+    "mongodb": "^4.0.1"
   }
 }
