--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Stephen Studer",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "fastify": "^3.19.2",
     "fastify-static": "^4.2.2",
