--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "fastify": "^3.19.2",
     "fastify-cookie": "^5.3.1",
+    "fastify-cors": "^6.0.2",
     "fastify-static": "^4.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.1"
