--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
   "author": "Stephen Studer",
   "license": "ISC",
   "dependencies": {
+    "cross-fetch": "^3.1.4",
     "fastify": "^3.22.0",
     "fastify-static": "^4.2.3"
   }
