--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "fastify-static": "^4.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.1",
-    "nodemailer": "^6.6.5"
+    "nodemailer": "^6.6.5",
+    "otplib": "^12.0.1"
   }
 }
